# transformerlab-api

./: .gitignore  DISTRIBUTED_TRAINING.md  Dockerfile.cuda  Dockerfile.gpu  README.md  WORKFLOW_TRIGGER_IMPLEMENTATION_SUMMARY.md  api.py  docker-compose.yml  download_and_install.sh  download_and_install_remote_script.sh  init.sh  install.sh  install_miniconda_windows.bat  install_win.bat  install_windows.bat  pyproject.toml  pytest.ini  requirements-gpu.in  requirements-no-gpu-uv.txt  requirements-no-gpu.txt  requirements-rocm-uv.txt  requirements-rocm.in  requirements-uv.txt  requirements.in  requirements.txt  run.sh  run_dev.sh  run_windows.bat  test_workflow.yaml
.github/workflows/: pytest-api.yml  pytest-server-test-macos.yml  pytest-server-test.yml  pytest.yml  release.yml
docker/common/: Dockerfile
docker/cpu/: README.md  deploy.ps1  deploy.sh  docker-compose.yml  docker-compose.yml.tpl
docker/gpu/amd/: Dockerfile
docker/gpu/nvidia/: Dockerfile.cuda  README.md  deploy.ps1  deploy.sh  docker-compose.yml.tpl
docker/gpu/rocm/: Dockerfile.rocm
llmlab/: launch_header_text.txt
llmlab/galleries/: data-gallery.json  model-gallery.json
llmlab/plugins/eleuther-ai-lm-evaluation-harness/: index.json  setup.sh
llmlab/plugins/llama_cpp_server/: index.json  setup.sh
llmlab/plugins/llama_trainer/: main.py  setup.sh
llmlab/plugins/t5_lora_trainer/: index.json  main.py
llmlab/plugins/vllm_server/: index.json  main.py  setup.sh
llmlab/routers/: config.py  data.py  evals.py  experiment.py  model.py  plugins.py  serverinfo.py  train.py
llmlab/shared/: download_huggingface_model.py  shared.py
scripts/: aws.sh  check_sizes_of_models.py  conda_activate.sh  create_user.py  increment_plugin_versions.py
scripts/aws/: aws.sh  awsservers.py
scripts/azure/: README.md
scripts/azure/terraform/: main.tf  run.sh  terraform.tfvars  terraform.tfvars.tpl  variables.tf
scripts/xml-rpc-client-example/: example-with-retries.py  train_example.py  training_client_example.py
scripts/xml-rpc-client-example/tlab_sdk_client/: client.py
test/: API.http  README.md  test_api.py  test_api_basic.py  test_config.py  test_db.py  test_event_triggers.py  test_plugins.py  test_serverinfo.py  utils.py
test/api/: conftest.py  test_api.py  test_auth.py  test_config.py  test_data.py  test_dataset_service.py  test_diffusion.py  test_documents.py  test_evals.py  test_experiment_export.py  test_experiment_jobs.py  test_experiment_service.py  test_export.py  test_job_sdk.py  test_jobs.py  test_model.py  test_model_gguf.py  test_network.py  test_plugins.py  test_prompts.py  test_recipes.py  test_recipes_new.py  test_remote.py  test_server_info.py  test_tasks.py  test_tools.py  test_train.py  test_user.py  test_workflow_triggers.py  test_workflows.py
test/db/: test_db.py  test_db_init_columns.py  test_jobs_trigger_processing.py  test_workflow_triggers.py
test/installer/: test_install_dot_sh.py
test/plugin_sdk/: test_plugin.py
test/plugins/: plugin.schema.json
test/routers/: test_users_router.py
test/services/: test_auth_helpers.py  test_user_service.py
test/shared/: test_shared.py  test_ssl.py
transformerlab/: db.py  db.py.bak  fastchat_openai_api.py  jobs_trigger_processing.py  launch_header_text.txt
transformerlab/db/: a_sync.py  constants.py  datasets.py  db.py  filesystem_migrations.py  jobs.py  session.py  sync.py  utils.py  workflows.py
transformerlab/docs/: manual_install.md  manual_install_osx.md
transformerlab/galleries/: data-gallery.json  dataset-gallery.json  exp-recipe-gallery.json  model-gallery.json  model-group-gallery.json  prompt-gallery.json  recipe-gallery.json  task-gallery.json  tasks-gallery.json
transformerlab/helpers/: model_helper.py
transformerlab/models/: basemodel.py  filesystemmodel.py  huggingfacemodel.py  lmstudiomodel.py  localmodel.py  localmodelstore.py  model_helper.py  modelstore.py  ollamamodel.py  users.py
transformerlab/plugin_sdk/: distributed_utils.py  plugin_harness.py  training_plugin_harness.py
transformerlab/plugin_sdk/transformerlab/: plugin.py  tfl_decorators.py  tlab_decorators.py  utils.py
transformerlab/plugins/: distributed_training_wrapper.py
transformerlab/plugins/airllm_fastchat_server/: index.json  model_worker.py  setup.sh
transformerlab/plugins/airllm_mlx_server/: index.json  main.py
transformerlab/plugins/audio_server/: index.json  main.py
transformerlab/plugins/audio_trainer/: index.json  main.py
transformerlab/plugins/autotrain_sft_trainer/: index.json  main.py  main_old.py  setup.sh
transformerlab/plugins/basic_evals/: index.json  info.md  main.py  setup.sh
transformerlab/plugins/batched_generation_datasets/: index.json  info.md  main.py  requests_batching.py  setup.sh
transformerlab/plugins/common-eleuther-ai-lm-eval-harness/: index.json  main.py  setup.sh
transformerlab/plugins/common-eleuther-ai-lm-eval-harness-mlx/: index.json  main.py  setup.sh
transformerlab/plugins/dataset_imagegen/: index.json  info.md  (+1 more)
transformerlab/routers/: auth2.py  batched_prompts.py  config.py  data.py  diffusion.py  evals.py  experiment.py  job_sdk.py  jobs.py  model.py  network.py  plugin_ui_proxy.py  plugins.py  prompts.py  rag.py  recipes.py  remote.py  serverinfo.py  tasks.py  teams.py  test_users.py  tools.py  train.py  users.py  workflow_triggers.py  workflows.py
transformerlab/schemas/: user.py
transformerlab/scripts/: upload_to_s3.py
transformerlab/services/: dataset_service.py  experiment_init.py  experiment_service.py  job_service.py  openid_client.py  redirect_transport.py  tasks_service.py  user_service.py
transformerlab/shared/: batched_requests.py  constants.py  diffusion_worker.py  dirs.py  dirs_workspace.py  download_huggingface_adaptor.py  download_huggingface_model.py  galleries.py  plugin_library.py  request_context.py  s3_mount.py  shared.py  ssl_utils.py
(+271 files in other folders)
