[project]
name = "transformerlab-api"
version = "0.1.0"
description = "TransformerLab API: Fast, flexible, and scalable ML serving platform."
authors = [
    { name = "Transformer Lab Contributors", email = "support@transformerlab.ai" },
]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]

readme = "README.md"
requires-python = ">=3.8"
keywords = ["machine learning", "api", "transformers", "serving", "inference"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Main dependencies (GPU/requirements-uv.txt versions)
dependencies = [
    "absl-py==2.1.0",
    "accelerate==1.3.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "aiosqlite==0.20.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "attrs==25.1.0",
    "azure-ai-documentintelligence==1.0.2",
    "azure-core==1.33.0",
    "azure-identity==1.21.0",
    "beautifulsoup4==4.13.3",
    "brotli==1.1.0",
    "cffi==1.17.1",
    "click==8.1.8",
    "cobble==0.1.4",
    "coloredlogs==15.0.1",
    "cryptography==44.0.2",
    "defusedxml==0.7.1",
    "dill==0.3.8",
    "docker-pycreds==0.4.0",
    "einops==0.8.0",
    "et-xmlfile==2.0.0",
    "evaluate==0.4.3",
    "fastapi==0.115.7",
    "flatbuffers==25.2.10",
    "frozenlist==1.5.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "greenlet==3.1.1",
    "grpcio==1.70.0",
    "h11==0.14.0",
    "hf-xet==1.0.3",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.30.2",
    "humanfriendly==10.0",
    "inflate64==1.0.1",
    "isodate==0.7.2",
    "joblib==1.4.2",
    "latex2mathml==3.77.0",
    "loralib==0.1.2",
    "lxml==5.3.2",
    "magika==0.6.1",
    "mammoth==1.9.0",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markdown2==2.5.3",
    "markdownify==1.1.0",
    "markitdown[all]==0.1.1",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msal==1.32.0",
    "msal-extensions==1.3.1",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "multivolumefile==0.2.3",
    "nh3==0.2.20",
    "nltk==3.9.1",
    "nvidia-ml-py3==7.352.0",
    "olefile==0.47",
    "onnxruntime==1.21.0",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pdfminer-six==20250327",
    "peft==0.14.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.50",
    "propcache==0.2.1",
    "protobuf==5.29.3",
    "psutil==6.1.1",
    "py7zr==0.22.0",
    "pyarrow==19.0.0",
    "pybcj==1.0.3",
    "pycparser==2.22",
    "pycryptodomex==3.21.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.8.1",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pyppmd==1.1.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "python-pptx==1.0.2",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzstd==0.16.2",
    "regex==2024.11.6",
    "rich==13.9.4",
    "rouge-score==0.1.2",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "sentence-transformers==3.4.1",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.22.0",
    "setproctitle==1.3.5",
    "shortuuid==1.0.13",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "speechrecognition==3.14.2",
    "sqlalchemy==2.0.38",
    "starlette==0.45.3",
    "svgwrite==1.4.3",
    "sympy==1.13.1",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardx==2.6.2.2",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.8.0",
    "tokenizers==0.21.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformerlab-inference==0.2.37",
    "transformers==4.51.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "uvicorn==0.34.0",
    "wandb==0.19.10",
    "watchfiles==1.0.4",
    "wavedrom==2.0.3.post3",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "xlrd==2.0.1",
    "xlsxwriter==3.2.2",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "youtube-transcript-api==1.0.3",
]

[project.optional-dependencies]
# GPU-specific extras (from requirements-uv.txt, CUDA/cuDNN/cuBLAS, etc.)
gpu = [
    "certifi==2024.7.4",
    "charset-normalizer==3.4.1",
    "datasets==3.2.0",
    "filelock==3.17.0",
    "fsspec==2024.9.0",
    "idna==3.10",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "packaging==25.0",
    "pillow==11.1.0",
    "requests==2.32.3",
    "setuptools==75.8.0",
    "tqdm==4.67.1",
    "triton==3.2.0",
    "urllib3==1.26.19",
]
# CPU-specific extras (from requirements-no-gpu-uv.txt, e.g. pyarrow-hotfix, and any version conflicts)
cpu = [
    "certifi==2022.12.7",
    "charset-normalizer==2.1.1",
    "datasets==2.19.1",
    "filelock==3.13.1",
    "fsspec==2024.2.0",
    "idna==3.4",
    "jinja2==3.1.4",
    "macmon-python==0.1.1",
    "markupsafe==2.1.5",
    "networkx==3.3",
    "numpy==2.1.2",
    "packaging==24.1",
    "pillow==11.0.0",
    "pyarrow-hotfix==0.6",
    "requests==2.28.1",
    "setuptools==70.2.0",
    "tqdm==4.66.5",
    "urllib3==1.26.13",
]


[tool.setuptools.packages.find]
include = ["transformerlab*"]
